--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -9,11 +9,9 @@
 <% @jobs.each do |job| %>
   <h4>
     <%= link_to job.title, job_path(job) %> |
-    <%= job.company %> |
+    <%= job.company %>
     <% if @user %>
-      <%= link_to "Withdraw Application" %>
+      | <%= link_to "Withdraw Application" %>
     <% end %>
   </h4>
 <% end %>
-
-<%= link_to "Create Job", new_job_path %>
