--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,11 +1,11 @@
-<h2>Job Description</h2>
 <h3><%= @job.title %></h3>
 <h3><%= @job.company %></h3>
+<h2>Job Description</h2>
 <p><%= @job.description %></p>
 <h4>Skills Desired</h4>
 
 
-<%= form_tag('/applications') do %>
+<%= form_tag('/applications/new') do %>
   <%= hidden_field_tag "job", @job.id %>
   <%= submit_tag "Apply for Job", class: 'btn btn-primary' %>
 <% end %>
