--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,7 +12,6 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
-          <li><%= link_to "My Profile", user_path(current_user) %></li>
           <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
         <% else %>
           <li><%= link_to "Sign up", new_user_registration_path %></li>
@@ -22,10 +21,24 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-        <li><%= link_to "My Applications", user_applications_path(current_user) %></li>
-        <li><%= link_to "Job Seekers", users_path %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "My Applications", user_applications_path(current_user) %></li>
+            <!-- <li><%= link_to "Job Seekers", users_path %></li> -->
+            <li><%= link_to "My Profile", user_path(current_user) %></li>
+          </ul>
+        </li>
+
         <% end %>
-        <li><%= link_to "Available Jobs", jobs_path %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Jobs <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Available Jobs", jobs_path %></li>
+            <li><%= link_to "Create a Job (Employers)", new_job_path %></li>
+          </ul>
+        </li>
+
       </ul>
     </div><!--/.nav-collapse -->
   </div>
