--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,8 +41,10 @@ div#flash_notice {
   padding: 10px auto 0;
   color: white;
   opacity: 0.5;
+  margin: auto;
+  width: 60%;
 }
-div#flash_alert {
+div#flash_error {
   background-color: red;
   height: 30px;
   text-align: center;
@@ -50,9 +52,15 @@ div#flash_alert {
   padding: 10px auto 0;
   color: white;
   opacity: 0.5;
+  width: 60%;
+  margin: auto
 }
 
 .form-control {
   width: 60%;
   margin: auto;
+}
+
+.jumbotron {
+  margin-top: 50px;
 }
