--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -1,10 +1,4 @@
 <h2>
   <%= @user.first_name %>'s Applications
 </h2>
-<% @applications.each do |application| %>
-  <h4>
-    <%= link_to application.job.title, application_path(application) %> |
-    <%= application.job.company %> |
-    <%= link_to "Withdraw Application", application_path(application), method: 'delete' %>
-  </h4>
-<% end %>
+<%= render partial: 'application', collection: @applications %>
