--- a/app/views/applications/new.html.erb
+++ b/app/views/applications/new.html.erb
@@ -3,13 +3,11 @@
 <h3><%= @job.company %></h3>
 
 <%= form_for(@application) do |f| %>
-  <%= f.text_area :cover_letter, class: 'form-control', placeholder: 'Enter your cover letter here...' %> <br>
+  <%= f.text_area :cover_letter, class: 'form-control', placeholder: @application.errors.any? ? "#{@application.errors.full_messages_for(:cover_letter).to_sentence}" : 'Enter your cover letter here...' %> <br>
   <%= f.hidden_field :job_id, value: @job.id %>
   <p>Please list two references below...</p> <br>
   <%= f.fields_for :references do |ref| %>
-    <%= ref.text_field :name, class: 'form-control', placeholder: 'Reference Name' %> <br>
-    <%= ref.text_field :phone_number, class: 'form-control', placeholder: 'Reference Phone Number' %> <br>
-    <%= ref.text_field :relationship, class: 'form-control', placeholder: 'Reference Relationship' %> <br>
+    <%= render partial: 'references/form', locals: {ref: ref} %>
   <% end %>
-  <%= f.submit %>
+  <%= f.submit "Apply", class: "btn btn-default" %>
 <% end %>
