--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,17 +1,2 @@
-<h2>
-  <% if @user %>
-  <%= @user.first_name %>'s
-  <% else %>
-  Available
-  <% end %>
-  Jobs
-</h2>
-<% @jobs.each do |job| %>
-  <h4>
-    <%= link_to job.title, job_path(job) %> |
-    <%= job.company %>
-    <% if @user %>
-      | <%= link_to "Withdraw Application" %>
-    <% end %>
-  </h4>
-<% end %>
+<h2> Available Jobs</h2>
+<%= render partial: 'job', collection: @jobs %>
