--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,2 +1,6 @@
-
-<!-- <p>Sign up with <%= link_to 'email', new_user_registration_path %> or with <%= link_to 'Github', user_github_omniauth_authorize_path %>. </p> -->
+<div class="jumbotron">
+  <h1>Welcome to Flat Job Finder!</h1>
+  <p>A place to start your career as a web developer.</p>
+  <%= link_to "Sign in", new_user_session_path, class: 'btn btn-primary' %> 
+  <%= link_to "Sign up", new_user_registration_path, class: 'btn btn-primary' %>
+</div>
