--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -5,9 +5,11 @@
   <%= @user.cell_phone %>
 </p>
 <h3>Address: </h3>
-<h4><%= @user.street_1 %></h4>
-<h4><%= @user.street_2 %></h4>
-<h4><%= @user.city %>, <%= @user.state %> <%= @user.zip_code %></h4>
+<p><%= @user.street_1 %></p>
+<p><%= @user.street_2 %></p>
+<p><%= @user.city %>, <%= @user.state %> <%= @user.zip_code %></p>
+<h4>Description</h4>
+<p><%= @user.description %></p>
 <% if current_user.id == @user.id %>
   <%= link_to "Edit Profile", edit_user_path(@user), role: 'button', class: 'btn btn-primary' %>
 <% end %>
