--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -6,4 +6,4 @@
 <h3>Cover Letter</h3>
 <p><%= @application.cover_letter %></p>
 
-<%= link_to "Withdraw Application", application_path(@application), method: 'delete' %>
+<%= link_to "Withdraw Application", application_path(@application), class: 'btn btn-primary', method: 'delete' %>
