--- a/app/views/references/_reference.html.erb
+++ b/app/views/references/_reference.html.erb
@@ -1,4 +1,8 @@
-<h4>Reference# <%= index + 1 %></h4>
-<p><%= ref.name %></p>
-<p><%= ref.phone_number %></p>
-<p><%= ref.relationship %></p>
+<div class="panel panel-default">
+  <div class="panel-heading"><h4>Reference# <%= index + 1 %></h4></div>
+    <div class="panel-body">
+      <p><%= ref.name %></p>
+      <p><%= ref.phone_number %></p>
+      <p><%= ref.relationship %></p>
+    </div>
+</div>
