--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -4,7 +4,4 @@
 <p><%= @job.description %></p>
 
 
-<%= form_tag('/applications/new') do %>
-  <%= hidden_field_tag "job", @job.id %>
-  <%= submit_tag "Apply for Job", class: 'btn btn-primary' %>
-<% end %>
+<%= link_to "Apply for Job", new_job_application_path(@job), class: 'btn btn-primary' %>
