--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -45,6 +45,7 @@ div#flash_notice {
   width: 60%;
 }
 div#flash_error,
+div#flash_alert,
 div#error_explanation li {
   background-color: red;
   height: 30px;
@@ -64,4 +65,9 @@ div#error_explanation li {
 
 .jumbotron {
   margin-top: 50px;
+}
+
+hr {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
